--- a/soapfish/templates/lib.jinja2
+++ b/soapfish/templates/lib.jinja2
@@ -84,19 +84,19 @@ class {{ name|capitalize }}({{ restriction|type(known_types) }}):
 {% endif %}
 {%- if restriction.totalDigits %}
     totalDigits = {{ restriction.totalDigits.value }}
-{% endif %}
+{%- endif %}
 {%- if restriction.length %}
     length = {{ restriction.length.value }}
-{% endif %}
+{%- endif %}
 {%- if restriction.minLength %}
     minLength = {{ restriction.minLength.value }}
-{% endif %}
+{%- endif %}
 {%- if restriction.maxLength %}
     maxLength = {{ restriction.maxLength.value }}
-{% endif %}
+{%- endif %}
 {%- if restriction.whiteSpace %}
     whiteSpace = {{ restriction.whiteSpace.value }}
-{% endif %}
+{%- endif %}
 {%- if not restriction.enumerations and not restriction.pattern
         and not restriction.minInclusive and not restriction.minExclusive
         and not restriction.maxInclusive and not restriction.maxExclusive
@@ -111,7 +111,11 @@ class {{ name|capitalize }}({{ restriction|type(known_types) }}):
 
 {% macro render_complexType(class_name, content, known_types=None) -%}
 {%- set ct = content %}
-{%- for element in content.sequence.elements -%}
+{%- set complex_elements = [] %}
+{%- if content.all -%}{% for element in content.all.elements %}{% do complex_elements.append(element) %}{% endfor %}{% endif %}
+{%- if content.sequence -%}{%- for element in content.sequence.elements -%}{%- do complex_elements.append(element) -%}{%- endfor %}{%- endif %}
+{%- if content.choice -%}{%- for element in content.choice.elements -%}{%- do complex_elements.append(element) -%}{%- endfor %}{%- endif %}
+{%- for element in complex_elements -%}
 {%- if element.complexType %}
 {{ render_complexType(element.name, element.complexType, known_types) }}
 {%- do known_types.append(element.name|capitalize) -%}
@@ -167,6 +171,8 @@ class {{ class_name|capitalize }}(xsd.ComplexType):
     {%- set field_type = 'ListElement' if element.maxOccurs and element.maxOccurs > 1 else 'Element' %}
     {%- if element.type %}
     {{ element.name|fix_keyword }} = xsd.{{ field_type }}({{ element|type(known_types) }}{% if element.name in keywords or element.maxOccurs and element.maxOccurs > 1 %}, tagname='{{ element.name }}'{% endif %}{% if element.minOccurs is not none %}, minOccurs={{ element.minOccurs|upper }}{% endif %}{% if element.maxOccurs and element.maxOccurs > 1 %}, maxOccurs={{ element.maxOccurs|max_occurs }}{% endif %}{% if element.nillable %}, nillable=True{% endif %})
+    {%- elif element.complexType %}
+    {{ element.name|fix_keyword }} = xsd.{{ field_type }}({{ element.name|capitalize }}{% if element.name in keywords or element.maxOccurs and element.maxOccurs > 1 %}, tagname='{{ element.name }}'{% endif %}{% if element.minOccurs is not none %}, minOccurs={{ element.minOccurs|upper }}{% endif %}{% if element.maxOccurs and element.maxOccurs > 1 %}, maxOccurs={{ element.maxOccurs|max_occurs }}{% endif %}{% if element.nillable %}, nillable=True{% endif %})
     {%- endif %}
     {%- if element.simpleType %}
     {{ element.name|fix_keyword }} = xsd.Element({{ element.simpleType.restriction|type(known_types) }}(
